<resources>
    <string name="app_name">DeminicCalc</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="clear">C</string>
    <string name="power">^</string>
    <string name="bracket">(  )</string>
    <string name="Mod">%</string>
    <string name="Division">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>`
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="multiply">✖</string>
    <string name="minus"> − </string>
    <string name="plus">+</string>
    <string name="equal">＝</string>
    <string name="Health_report">Health Report</string>
    <string name="Centimeter">Centimeter</string>
    <string name="Foot">Foot</string>
    <string name="Inches">Inches</string>
    <string name="Meter">Meter</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="set">0</string>
    <string name="BMI">Body Mass Index (BMI)</string>
    <string name="BMR">Body Metabolic Rate</string>
    <string name="InputData">Input data</string>
    <string name="pie">π</string>
    <string name="log">log</string>
    <string name="In">In</string>
    <string name="square_root">√</string>
    <string name="cube_root">∛</string>
    <string name="abs">|X|</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="cancel">cancel</string>
    <string name="Temp">Temperature</string>
    <string name="Vol">Volume</string>
    <string name="Area">Area</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>


</resources>